fix: redesign left side fed
